[project]
name = "dandy_lib"
dynamic = ["version", "readme"]
description = "Libraries that Dandelion built"
requires-python = "~=3.13"
license = "GPL-3.0-only"
authors = [{name="Dandelion Good", email = "dandeliongood@proton.me"}]

dependencies = [
    "annotated-types~=0.7.0",
    "pyyaml~=6.0"
]

[project.optional-dependencies]
test = ["tox~=4.28"]
tooling = [
    "pre-commit~=4.3",
    "reorder-python-imports~=3.16",
    "types-PyYAML~=6.0",
    "pytest-mypy~=1.0",
    "mypy~=1.18"
]
pytest = [
    "pytest-cov~=7.0",
    "pytest~=9.0",
    "pytest-xdist~=3.8"
]
lint = ["black"]
profile = ["snakeviz~=2.2"]
type = [
    "types-PyYAML~=6.0",
    "pytest-mypy~=1.0",
    "mypy~=1.18"
]
clean = [
    "coverage~=7.12"
]


[tool.tox]
requires = ["tox~=4.28", "virtualenv-pyenv"]
extras = ["pytest"]
env_list = ["clean", "3.13", "3.14", "3.15", "type", "lint"]


[tool.tox.env_run_base]
description = "Run test under {base_python}"
extras = ["pytest"]
commands = [["pytest", "--cov=dandy_lib", "--cov-append", "--cov-report=term-missing", { replace = "posargs", default = ["-vv"], extend = true } ]]

[tool.tox.env.clean]
skip_install = true
deps = ["coverage"]
allowlist_externals = ["which"]
commands = [["which", "-a", "coverage"], ["coverage", "erase"]]

[tool.tox.env.report]
skip_install = true
deps = ["coverage"]
commands = [["coverage", "report", "--fail-under=100"]]

[tool.tox.env.pyenv]
requires = ["virtualenv-pyenv"]
commands = [["pytest", { replace = "posargs", default = [], extend = true } ]]
[tool.tox.env.pyenv.set_env]
VIRTUALENV_DISCOVERY = "pyenv"

[tool.tox.env.type]
description = "run type check on code base"
extras = ["type"]
commands = [["mypy", "src/dandy_lib/testing.py", "src/dandy_lib/datatypes/numeric.py", "src/dandy_lib/datatypes/twodee.py"], ["mypy", "tests"]]


[tool.tox.env.lint]
description = "Run linting on code base"
extras = ["lint"]
commands = [["black", "src"], ["black", "tests"]]

[tool.setuptools.package-data]
dandy_lib = ["py.typed"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools_scm]

[tool.black]
line-length = 80

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8", "wheel"]
build-backend = "setuptools.build_meta"
