[project]
name = "dandy_lib"
dynamic = ["version", "readme"]
description = "Libraries that Dandelion built"
requires-python = "~=3.13"
license = "GPL-3.0-only"
authors = [{name="Dandelion Good", email = "dandeliongood@proton.me"}]

dependencies = [
    "annotated-types~=0.7.0",
    "pyyaml~=6.0"
]

[project.optional-dependencies]
test = ["tox~=4.28", "virtualenv-pyenv~=0.6"]
tooling = [
    "pre-commit~=4.3",
    "reorder-python-imports~=3.16",
    "types-PyYAML~=6.0",
    "pytest-mypy~=1.0",
    "mypy~=1.18"
]
pytest = [
    "pytest-cov~=7.0",
    "pytest~=9.0",
    "pytest-xdist~=3.8"
]
lint = ["black"]
profile = ["snakeviz~=2.2"]
type = [
    "types-PyYAML~=6.0",
    "pytest-mypy~=1.0",
    "mypy~=1.18"
]
cov = [
    "coverage~=7.12"
]


[tool.tox]
legacy_tox_ini = """
[tox]
deps =
    "tox~=4.28"
    "virtualenv-pyenv"
extras = pytest
env_list = clean, py3{13,14,15}{,-type,-lint}, type, lint, report

[testenv]
description = "Run test under {base_python}"
extras =  pytest
commands = python -m pytest --cov=dandy_lib --cov-append --cov-report=term-missing -vv

[testenv:{,py313-,py314-,py315}debug]
extras = pytest
commands =
    python -m pytest --pdb


[testenv:clean]
extras = cov
commands =
    coverage erase

[testenv:report]
extras = cov
commands = coverage report --fail-under=50


[testenv:{,py313-,py314-,py315-}type]
description = "run type check on code base"
extras = type
    pytest
    lint
commands =
    mypy src
    mypy tests
    black type_stubs
[tool.tox.env.type.set_env]
MYPATH = "type_stubs"


[testenv:{,py313-,py314-,py315-}lint]
description = "Run linting on code base"
extras = lint
commands =
    black src
    black tests
"""

[tool.setuptools.package-data]
dandy_lib = ["py.typed"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools_scm]

[tool.black]
line-length = 80

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8", "wheel"]
build-backend = "setuptools.build_meta"
